--- a/index.html
+++ b/index.html
@@ -590,72 +590,77 @@
     <!-- Footer -->
     <footer class="footer py-5">
         <div class="container">
-            <div class="row g-4">
-                <div class="col-lg-4 col-md-6">
-                    <h5 class="fw-bold mb-3">
-                        <i class="bi bi-file-earmark-text text-primary"></i>
-                        <span class="text-primary">Resume</span><span>Pro</span>
-                    </h5>
-                    <p class="text-muted mb-4">
-                        Build professional resumes and find your dream job faster with our AI-powered platform.
+            <div class="row g-4 g-md-5">
+                <div class="col-lg-4 col-md-6" data-aos="fade-up">
+                    <a href="index.html" class="text-decoration-none">
+                        <h4 class="fw-bold mb-3 d-flex align-items-center gap-2">
+                            <i class="bi bi-file-earmark-text text-primary" style="font-size: 2rem;"></i>
+                            <span><span class="text-primary">Resume</span><span class="text-white">Pro</span></span>
+                        </h4>
+                    </a>
+                    <p class="text-muted mb-4 pe-lg-4">
+                        Build professional, ATS-friendly resumes and find your dream job faster with our AI-powered platform. Join 50,000+ successful job seekers.
                     </p>
                     <div class="social-links">
-                        <a href="#" class="social-link"><i class="bi bi-facebook"></i></a>
-                        <a href="#" class="social-link"><i class="bi bi-twitter"></i></a>
-                        <a href="#" class="social-link"><i class="bi bi-linkedin"></i></a>
-                        <a href="#" class="social-link"><i class="bi bi-instagram"></i></a>
+                        <a href="https://facebook.com" target="_blank" rel="noopener" class="social-link" title="Facebook">\n                            <i class="bi bi-facebook"></i>\n                        </a>\n                        <a href="https://twitter.com" target="_blank" rel="noopener" class="social-link" title="Twitter">\n                            <i class="bi bi-twitter-x"></i>\n                        </a>\n                        <a href="https://linkedin.com" target="_blank" rel="noopener" class="social-link" title="LinkedIn">\n                            <i class="bi bi-linkedin"></i>\n                        </a>\n                        <a href="https://instagram.com" target="_blank" rel="noopener" class="social-link" title="Instagram">\n                            <i class="bi bi-instagram"></i>\n                        </a>\n                        <a href="https://youtube.com" target="_blank" rel="noopener" class="social-link" title="YouTube">\n                            <i class="bi bi-youtube"></i>\n                        </a>
                     </div>
                 </div>
 
-                <div class="col-lg-2 col-md-6">
-                    <h6 class="fw-bold mb-3">Product</h6>
+                <div class="col-lg-2 col-md-6 col-6" data-aos="fade-up" data-aos-delay="100">
+                    <h6 class="fw-bold mb-3 text-white">Product</h6>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="#features" class="text-muted text-decoration-none">Features</a></li>
-                        <li class="mb-2"><a href="templates.html" class="text-muted text-decoration-none">Templates</a></li>
-                        <li class="mb-2"><a href="pricing.html" class="text-muted text-decoration-none">Pricing</a></li>
-                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Reviews</a></li>
+                        <li class="mb-2"><a href="#features" class="text-muted text-decoration-none footer-link">Features</a></li>
+                        <li class="mb-2"><a href="templates.html" class="text-muted text-decoration-none footer-link">Templates</a></li>
+                        <li class="mb-2"><a href="pricing.html" class="text-muted text-decoration-none footer-link">Pricing</a></li>
+                        <li class="mb-2"><a href="dashboard.html" class="text-muted text-decoration-none footer-link">Dashboard</a></li>
+                        <li class="mb-2"><a href="resume-builder.html" class="text-muted text-decoration-none footer-link">Resume Builder</a></li>
                     </ul>
                 </div>
 
-                <div class="col-lg-2 col-md-6">
-                    <h6 class="fw-bold mb-3">Resources</h6>
+                <div class="col-lg-2 col-md-6 col-6" data-aos="fade-up" data-aos-delay="200">
+                    <h6 class="fw-bold mb-3 text-white">Resources</h6>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Blog</a></li>
-                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Help Center</a></li>
-                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Career Tips</a></li>
-                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Examples</a></li>
+                        <li class="mb-2"><a href="jobs.html" class="text-muted text-decoration-none footer-link">Job Board</a></li>
+                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none footer-link">Resume Examples</a></li>
+                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none footer-link">Career Tips</a></li>
+                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none footer-link">Blog</a></li>
+                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none footer-link">Help Center</a></li>
                     </ul>
                 </div>
 
-                <div class="col-lg-2 col-md-6">
-                    <h6 class="fw-bold mb-3">Company</h6>
+                <div class="col-lg-2 col-md-6 col-6" data-aos="fade-up" data-aos-delay="300">
+                    <h6 class="fw-bold mb-3 text-white">Company</h6>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none">About Us</a></li>
-                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Contact</a></li>
-                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Careers</a></li>
-                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Partners</a></li>
+                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none footer-link">About Us</a></li>
+                        <li class="mb-2"><a href="profile.html" class="text-muted text-decoration-none footer-link">Contact</a></li>
+                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none footer-link">Careers</a></li>
+                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none footer-link">Partners</a></li>
+                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none footer-link">Press Kit</a></li>
                     </ul>
                 </div>
 
-                <div class="col-lg-2 col-md-6">
-                    <h6 class="fw-bold mb-3">Legal</h6>
+                <div class="col-lg-2 col-md-6 col-6" data-aos="fade-up" data-aos-delay="400">
+                    <h6 class="fw-bold mb-3 text-white">Legal</h6>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Privacy</a></li>
-                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Terms</a></li>
-                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Security</a></li>
-                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Cookies</a></li>
+                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none footer-link">Privacy Policy</a></li>
+                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none footer-link">Terms of Service</a></li>
+                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none footer-link">Cookie Policy</a></li>
+                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none footer-link">Security</a></li>
+                        <li class="mb-2"><a href="#" class="text-muted text-decoration-none footer-link">GDPR</a></li>
                     </ul>
                 </div>
             </div>
 
-            <hr class="my-4">
+            <hr class="my-4 my-md-5" style="border-color: rgba(255,255,255,0.1);">
 
-            <div class="row">
-                <div class="col-md-6 text-center text-md-start">
+            <div class="row align-items-center">
+                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                     <p class="text-muted mb-0">&copy; 2024 ResumePro. All rights reserved.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    <p class="text-muted mb-0">Made with <i class="bi bi-heart-fill text-danger"></i> for job seekers</p>
+                    <p class="text-muted mb-0">
+                        Made with <i class="bi bi-heart-fill text-danger" style="animation: heartbeat 1.5s ease-in-out infinite;"></i> for job seekers worldwide
+                    </p>
                 </div>
             </div>
         </div>
@@ -670,8 +675,48 @@
         AOS.init({
             duration: 800,
             once: true,
-            offset: 100
+            offset: 100,
+            easing: 'ease-out-cubic'
+        });
+        
+        // Navbar scroll effect
+        window.addEventListener('scroll', function() {
+            const navbar = document.querySelector('.navbar');
+            if (window.scrollY > 50) {
+                navbar.classList.add('scrolled');
+            } else {
+                navbar.classList.remove('scrolled');
+            }
+        });
+        
+        // Smooth scroll for anchor links
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    target.scrollIntoView({
+                        behavior: 'smooth',
+                        block: 'start'
+                    });
+                }
+            });
         });
     </script>
+    <style>
+        @keyframes heartbeat {
+            0%, 100% { transform: scale(1); }
+            10%, 30% { transform: scale(1.1); }
+            20%, 40% { transform: scale(1); }
+        }
+        .footer-link {
+            transition: all 0.3s ease;
+            display: inline-block;
+        }
+        .footer-link:hover {
+            color: var(--primary-blue) !important;
+            transform: translateX(5px);
+        }
+    </style>
 </body>
 </html>
