backend and frontend implemented same project inside for refrence

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     <div class="template-card">
                         <div class="template-preview">
                             <div class="template-placeholder">
-                                <i class="bi bi-file-earmark-text"></i>
+                                <img src="/assets/r2.jpg" alt="">
                             </div>
                         </div>
                         <div class="template-info">
@@ -250,8 +250,8 @@
                 <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
                     <div class="template-card">
                         <div class="template-preview">
-                            <div class="template-placeholder bg-info-subtle">
-                                <i class="bi bi-file-earmark-text text-info"></i>
+                            <div class="template-placeholder">
+                                <img src="/assets/r1.jpg" alt="">
                             </div>
                         </div>
                         <div class="template-info">
@@ -272,8 +272,8 @@
                 <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
                     <div class="template-card">
                         <div class="template-preview">
-                            <div class="template-placeholder bg-success-subtle">
-                                <i class="bi bi-file-earmark-text text-success"></i>
+                            <div class="template-placeholder">
+                                <img src="/assets/r3.jpg" alt="">
                             </div>
                         </div>
                         <div class="template-info">
@@ -294,8 +294,8 @@
                 <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
                     <div class="template-card">
                         <div class="template-preview">
-                            <div class="template-placeholder bg-danger-subtle">
-                                <i class="bi bi-file-earmark-text text-danger"></i>
+                            <div class="template-placeholder">
+                                <img src="/assets/r2.jpg" alt="">
                             </div>
                         </div>
                         <div class="template-info">
