--- a/register.html
+++ b/register.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register - RESUNOVA AI</title>
+    <title>Register - ResumePro</title>
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <style>
         .google-btn {
@@ -97,12 +98,19 @@
 <body>
     <div class="auth-wrapper">
         <div class="container">
+            <!-- Back Button -->
+            <div class="mb-4" data-aos="fade-down" data-aos-duration="600">
+                <a href="index.html" class="btn btn-light shadow-sm" style="backdrop-filter: blur(10px); background: rgba(255, 255, 255, 0.9);">
+                    <i class="bi bi-arrow-left me-2"></i>Back to Home
+                </a>
+            </div>
+            
             <div class="auth-card" style="max-width: 550px;" data-aos="fade-up" data-aos-duration="600">
                 <div class="auth-header">
                     <a href="index.html" class="d-inline-block mb-4">
                         <h3 class="fw-bold mb-0">
                             <i class="bi bi-file-earmark-text text-primary"></i>
-                            <span class="text-primary">RESUNOVA</span> <span class="text-dark">AI</span>
+                            <span class="text-primary">Resume</span><span class="text-dark">Pro</span>
                         </h3>
                     </a>
                     <h2 class="fw-bold mb-2">Create Your Account 🚀</h2>
