overall ui with animation completed

--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
                     <ul class="list-unstyled">
                         <li class="mb-2"><a href="login.html" class="text-muted text-decoration-none footer-link">Login</a></li>
                         <li class="mb-2"><a href="register.html" class="text-muted text-decoration-none footer-link">Sign Up</a></li>
-                        <li class="mb-2"><a href="dashboard.html" class="text-muted text-decoration-none footer-link">Dashboard</a></li>
+                        <li class="mb-2"><a href="user-dashboard.html" class="text-muted text-decoration-none footer-link">Dashboard</a></li>
                         <li class="mb-2"><a href="profile.html" class="text-muted text-decoration-none footer-link">Profile</a></li>
                     </ul>
                 </div>
