--- a/register.html
+++ b/register.html
@@ -326,9 +326,9 @@
                     setTimeout(() => {
                         const role = result.data?.user?.role || 'user';
                         if (role === 'admin') {
-                            window.location.href = 'admin.html';
+                            window.location.href = 'admin-dashboard.html';
                         } else {
-                            window.location.href = 'dashboard.html';
+                            window.location.href = 'user-dashboard.html';
                         }
                     }, 1500);
                 } else {
