--- a/user-create-resume.html
+++ b/user-create-resume.html
@@ -618,7 +618,7 @@
             <div class="row align-items-center">
                 <div class="col-6">
                     <div class="d-flex align-items-center gap-3">
-                        <a href="#" class="text-decoration-none text-dark">
+                        <a href="#" onclick="window.location.href='user-dashboard.html'; return false;" class="text-decoration-none text-dark" data-testid="back-to-dashboard-btn">
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <line x1="19" y1="12" x2="5" y2="12"></line>
                                 <polyline points="12 19 5 12 12 5"></polyline>
@@ -1055,7 +1055,28 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/config.js"></script>
+    <script src="./assets/js/api-service.js"></script>
+    <script src="./assets/js/security.js"></script>
+    <script src="./assets/js/auth-updated.js"></script>
     <script>
+        // Require user authentication
+        document.addEventListener('DOMContentLoaded', function() {
+            if (!authService.isLoggedIn()) {
+                alert('Please login to create a resume');
+                window.location.href = 'login.html';
+                return;
+            }
+
+            const user = authService.getCurrentUser();
+            
+            // Redirect admin to admin dashboard
+            if (user && user.role === 'admin') {
+                window.location.href = 'admin-dashboard.html';
+                return;
+            }
+        });
+
         // Templates Data
         const templates = {
             basic: [
