--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -74,7 +74,7 @@
                     </div>
                 </div>
 
-                <button class="btn-create">
+                <button class="btn-create" onclick="window.location.href='user-create-resume.html'" data-testid="create-new-resume-btn">
                     <span>Create New</span>
                     <i class="bi bi-plus-lg"></i>
                 </button>
