unwanted files remove and routes setted admin

--- a/user-create-resume.html
+++ b/user-create-resume.html
@@ -1072,7 +1072,7 @@
             
             // Redirect admin to admin dashboard
             if (user && user.role === 'admin') {
-                window.location.href = 'admin-dashboard.html';
+                window.location.href = './admin/admin-dashboard.html';
                 return;
             }
         });
