--- a/register.html
+++ b/register.html
@@ -326,7 +326,7 @@
                     setTimeout(() => {
                         const role = result.data?.user?.role || 'user';
                         if (role === 'admin') {
-                            window.location.href = 'admin-dashboard.html';
+                            window.location.href = './admin/admin-dashboard.html';
                         } else {
                             window.location.href = 'user-dashboard.html';
                         }
