--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -187,7 +187,7 @@
             
             // Redirect admin to admin dashboard
             if (user && user.role === 'admin') {
-                window.location.href = 'admin-dashboard.html';
+                window.location.href = './admin/admin-dashboard.html';
                 return;
             }
 
