admin design completed

--- a/admin/admin_create_resume.html
+++ b/admin/admin_create_resume.html
@@ -467,7 +467,7 @@
                     <h1>📄 Upload Resume Template</h1>
                     <p>Create and publish beautiful resume templates</p>
                 </div>
-                <button class="back-btn" onclick="window.location.href='template-manager.html'">
+                <button class="back-btn" onclick="window.location.href='admin-layout.html'">
                     ← Back to Templates
                 </button>
             </div>
