--- a/admin/admin-layout.html
+++ b/admin/admin-layout.html
@@ -224,10 +224,13 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/config.js"></script>
-    <script src="/assets/js/api-service.js"></script>
-    <script src="/assets/js/security.js"></script>
-    <script src="/assets/js/auth-updated.js"></script>
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- Centralized Security & API -->
+    <script src="/assets/js/alerts.js"></script>
+    <script src="/assets/js/auth.js"></script>
+    <script src="/assets/js/api.js"></script>
+    <script src="/assets/js/guard.js"></script>
     <script src="/admin/controllers/dashboard.controller.js"></script>
     <script src="/admin/controllers/templates.controller.js"></script>
     <script src="/admin/controllers/categories.controller.js"></script>
