--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -170,26 +170,23 @@
     </nav>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./assets/js/config.js"></script>
-    <script src="./assets/js/api-service.js"></script>
-    <script src="./assets/js/security.js"></script>
-    <script src="./assets/js/auth-updated.js"></script>
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- Centralized Security & API -->
+    <script src="./assets/js/alerts.js"></script>
+    <script src="./assets/js/auth.js"></script>
+    <script src="./assets/js/api.js"></script>
+    <script src="./assets/js/guard.js"></script>
     
     <script>
         // Require user authentication (prevent admin from accessing user dashboard)
         document.addEventListener('DOMContentLoaded', function() {
-            if (!authService.isLoggedIn()) {
-                window.location.href = 'login.html';
-                return;
+            // Use centralized route guard
+            if (!routeGuard.requireUser()) {
+                return; // Guard will handle redirect
             }
 
-            const user = authService.getCurrentUser();
-            
-            // Redirect admin to admin dashboard
-            if (user && user.role === 'admin') {
-                window.location.href = './admin/admin-dashboard.html';
-                return;
-            }
+            const user = authManager.getCurrentUser();
 
             // Update user info if available
             if (user) {
@@ -213,11 +210,9 @@
             }
         });
 
-        // Handle logout
-        function handleLogout() {
-            if (confirm('Are you sure you want to logout?')) {
-                authService.logout();
-            }
+        // Handle logout with Swal confirmation
+        async function handleLogout() {
+            await authManager.logout();
         }
     </script>
 </body>
