api handled properly

--- a/index.html
+++ b/index.html
@@ -750,11 +750,11 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <!-- Centralized Security & API -->
+    <!-- Centralized Security & API - CORRECT ORDER -->
+    <script src="./assets/js/config.js"></script>
     <script src="./assets/js/alerts.js"></script>
     <script src="./assets/js/auth.js"></script>
     <script src="./assets/js/api.js"></script>
-    <script src="./assets/js/guard.js"></script>
     <script>
         // Handle template selection with authentication check
         async function handleTemplateSelection(targetPage) {
