--- a/admin/admin-layout.html
+++ b/admin/admin-layout.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel - ResumePro</title>
     
+    <!-- BLOCKING ADMIN GUARD - Must be first -->
+    <script src="/assets/js/admin-guard.js"></script>
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -226,11 +229,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <!-- Centralized Security & API -->
+    <!-- Centralized Security & API - CORRECT ORDER -->
+    <script src="/assets/js/config.js"></script>
     <script src="/assets/js/alerts.js"></script>
     <script src="/assets/js/auth.js"></script>
     <script src="/assets/js/api.js"></script>
-    <script src="/assets/js/guard.js"></script>
     <script src="/admin/controllers/dashboard.controller.js"></script>
     <script src="/admin/controllers/templates.controller.js"></script>
     <script src="/admin/controllers/categories.controller.js"></script>
