--- a/login.html
+++ b/login.html
@@ -119,11 +119,12 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <!-- Centralized Security & API -->
+    <!-- Centralized Security & API - CORRECT ORDER -->
+    <script src="./assets/js/config.js"></script>
     <script src="./assets/js/alerts.js"></script>
     <script src="./assets/js/auth.js"></script>
     <script src="./assets/js/api.js"></script>
-    <script src="./assets/js/guard.js"></script>
+    <script src="./assets/js/auth-guard.js"></script>
     <script>
         AOS.init({ duration: 500, once: true });
     </script>
