admin issue is fixed

--- a/admin/admin_create_resume.html
+++ b/admin/admin_create_resume.html
@@ -1249,8 +1249,8 @@
         try {
             console.log('Saving template...', templateData);
 
-            // Use apiHandler which automatically handles token from localStorage
-            const result = await apiHandler.post('/admin/templates', templateData);
+            // Use apiService which automatically handles token from localStorage
+            const result = await apiService.post('/admin/templates', templateData);
 
             if (result.success || result.data) {
                 await AlertUtil.showSuccess(publish ? 'Template published successfully!' : 'Template saved as draft!');
