new changes included

--- a/admin/admin-layout.html
+++ b/admin/admin-layout.html
@@ -249,6 +249,7 @@
     <script src="/admin/controllers/dashboard.controller.js"></script>
     <script src="/admin/controllers/templates.controller.js"></script>
     <script src="/admin/controllers/categories.controller.js"></script>
+    <script src="/admin/controllers/create_resume.controller.js"></script>
     
     <!-- STEP 6: Admin Router (initializes everything) -->
     <script src="/admin/admin.js"></script>
